--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "codility",
   "version": "1.0.0",
   "description": "A test challenge ",
-  "main": "challenge.js",
+  "main": "consecutiveRuns.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
